finished centering clock

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One" rel="stylesheet">
 </head>
 <body>
-		<div class="clockface" id="clockface">
-		</div>
+		<div class="clockface" id="clockface"></div>
 	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
